Revise /controllers/jobs.js, routes/jobs.js & /swagger.yaml to provide for pagination in API
