# routes/jobs.js
@@ -2,14 +2,14 @@ const express = require("express");
 const router = express.Router();
 
 const {
-  getAllJobs,
+  get10Jobs,
   getJob,
   createJob,
   updateJob,
   deleteJob,
 } = require("../controllers/jobs");
 
-router.route("/").get(getAllJobs).post(createJob);
+router.route("/").get(get10Jobs).post(createJob);
 router.route("/:id").get(getJob).patch(updateJob).delete(deleteJob);
 
 module.exports = router;
